Revert "fix: [sc-380] Multi-select Dropdown layout issue"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -207,7 +207,6 @@ input.form-control:focus {
 
 ng-multiselect-dropdown>.multiselect-dropdown>.dropdown-list {
     width: auto !important;
-    position: fixed !important;
 }
 
 ng-multiselect-dropdown>.multiselect-dropdown .dropdown-btn {
